--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -124,6 +124,13 @@ function Player(){
 			clean(player, dealer, deck);
 			alert("The dealer won after you held!");
 			turn++
+		}else if(dealer.cards.Value==player.cards.Value){
+			//DEALER WINS
+			console.log
+			writeMessage("OOh! You tied! Dealer wins!!");
+			Alert("You tie! Dealer wins by default! Try again, looser...or are you too chicken???");
+			clean(player, dealer, deck);
+			turn++
 		}
 	}
 };
@@ -169,6 +176,12 @@ function writeMessage(message){
 		var textnode = document.createTextNode(message);         // Create a text node
 		node.appendChild(textnode);                              // Append the text to <li>
 		document.getElementById("messageArea").appendChild(node);
+}
+function buttonHit(player, nDeck){
+	if(dealer.cards.Value<15){
+			dealer.Hit(nDeck);
+	}
+	player.Hit();
 }
 </script>
 </head>
@@ -216,7 +229,10 @@ function writeMessage(message){
         
         <!--CONTROL AREA-->
         <tr>
-        	<td id="control" colspan="8"> <button id="Hit" onClick="player.Hit()" type="button">Hit</button> <button id="Hold" onClick="player.Hold()" type="button">Hold</button></td>
+        	<td id="control" colspan="8"> 
+				<button id="Hit" onClick="buttonHit(player, nDeck)" type="button">Hit</button> 
+				<button id="Hold" onClick="player.Hold()" type="button">Hold</button>
+			</td>
         </tr>
    </table>
    <div id="messageArea">
@@ -238,6 +254,9 @@ function newGame(player,dealer,nDeck){
 	player.Hit(nDeck);
 	dealer.Hit(nDeck);
 	writeMessage("Will you Hit Or Hold?");
+	if(dealer.cards.Value<15){
+		dealer.Hit(nDeck);
+	}
 }
 //CLEAN UP
 	function clean(player, dealer, deck, turn){
@@ -296,7 +315,7 @@ function checkValues(player, dealer, nDeck){
 		alert("YOU WIN!! (Only because the dealer busted though...)");
 		clean(player, dealer, deck);
 	}
-	console.log("Dealer is playing = "+dealer.Playing);
+	//console.log("Dealer is playing = "+dealer.Playing);
 }
 
 //RUNS WHEN PAGE LOADS
