--- a/Projects/Project V 6/shoppingcart.html
+++ b/Projects/Project V 6/shoppingcart.html
@@ -13,6 +13,10 @@
 			//CHANGE DISPLAY OF HEADER
 		}
 	}
+	function logOut(){
+		localStorage.removeItem("LoggedIn");
+		location.reload();
+	}
 </script>
 </head>
 <body>
@@ -20,7 +24,7 @@
 	checkLogin();
 </script>
 <header>
-		<img src="logo.png" width="134" height="54"/>
+		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
@@ -28,7 +32,7 @@
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="logout.html">Log Out</a></li>
+            <button  class="ln" onClick="logOut()">Log Out</button>
             
 		</ul>
 </header>
