--- a/Projects/Project V 6/adminlogin.html
+++ b/Projects/Project V 6/adminlogin.html
@@ -7,20 +7,55 @@
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
 <script>
-		function checkLogin(){
-		var user = localStorage.getItem("user");
-		if(user.loggedIn == true){
-			//CHANGE DISPLAY OF HEADER
+	var passKey = "67912-GTTRV-88917-REEVO-133334";
+	var admin = localStorage.getItem("admin");
+	var Obj =localStorage.getItem("LoggedIn");
+	//CHECK IF LOGGED IN
+	function checkLogin(){
+		if(Obj == "true"){
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "inline";
+			}
+		}else{
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "inline";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "none";
+			}
+		}
+	}
+	//CHECK IF ADMIN IS LOGGED IN
+	function checkAdmin(){
+		var x = document.getElementsByClassName("admin");
+		if(admin == "true"){
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "block";
+			}
+		}else{
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+		}
+	}
+	function adminLogin(){
+		if(document.getElementById("key").value == passKey){
+			localStorage.setItem("admin","true");
+			alert("Welcome Admin!");
+		}else{
+			Alert("Improper Admin Access Key! Be sure to type in the access code from your verification email!");
 		}
 	}
 </script>
 </head>
-
 <body>
-<script>
-	checkLogin();
-</script>
-
 <header>
 		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -30,14 +65,19 @@
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="logout.html">Log Out</a></li>
+            <button  class="ln" onClick="logOut()">Log Out</button>
             
 		</ul>
 </header>
+<script>
+	console.log(Obj);
+	console.log(admin);
+	checkLogin();
+	checkAdmin(admin);
+</script>
 <div class="formdiv">
-	<form name="loginform" action="login.html" method="get" id="loginform">
-				<input name="username" type="text" /><div id="headerlogin">Admin Username</div><br>
-				<input name="accesskey" type="text" /><div id="headerlogin">Access Key</div><br>
+	<form name="loginform" method="get" id="loginform">
+				<input name="accesskey" type="text" id="key" /><div id="headerlogin">Access Key</div><br>
 				<input type="submit" text="Submit" value="Submit"/>
 			</form>
 </div>
