--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -5,6 +5,47 @@
 <title>Blackjack Trial</title>
 <link type="text/css" rel="stylesheet" href="stylesheets/blackjackstylesheet.css">
 <script>
+	var admin = localStorage.getItem("admin");
+	var Obj =localStorage.getItem("LoggedIn");
+	//CHECK IF LOGGED IN
+	function checkLogin(){
+		if(Obj == "true"){
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "inline";
+			}
+		}else{
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "inline";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "none";
+			}
+		}
+	}
+	//CHECK IF ADMIN IS LOGGED IN
+	function checkAdmin(){
+		var x = document.getElementsByClassName("admin");
+		if(admin == "true"){
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "block";
+			}
+		}else{
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+		}
+	}
+	function logOut(){
+		localStorage.removeItem("LoggedIn");
+		location.reload();
+	}
 var deck = [
 //`````````````````CLUBS``````````````````````````
 	c1 = {img:"cards/1.png",value:1},
@@ -154,7 +195,7 @@ function Dealer(){
 			if(dealer.CardPosition<=8){
 			document.getElementById("DealerCard"+dealer.CardPosition).innerHTML="<img src='"+card.img+"'/>";
 			dealer.CardPosition++;
-			}else{
+			}else{.
 			console.log("Dealer cards go over 8 slots");
 			}
 		var node = document.createElement("LI");                 							// Create a <li> node
@@ -260,7 +301,6 @@ function newGame(player,dealer,nDeck){
 }
 //CLEAN UP
 	function clean(player, dealer, deck, turn){
-
 	document.getElementById("messageArea").innerHTML="End of round...new Round Starting!";
 	player.cards.Value = 0;
 	player.CardPosition = 1;
@@ -275,12 +315,8 @@ function newGame(player,dealer,nDeck){
 		i++
 	}
 	newGame(player,dealer,nDeck);
-	if(turn>20){
-		alert("THANKS FOR PLAYING!");
 	}
 }
-
-
 //CHECK VALUES!!
 function checkValues(player, dealer, nDeck){
 	//if(dealer.cards.Value<15){
@@ -334,6 +370,10 @@ function game(nDeck) {
 	}else if(choice == "n"){
 		alert("Then we shall not deal...");
 	}
+		if(turn>5){
+		alert("THANK YOU FOR PLAYING!");
+		window.location.replace("games.html");
+		}
 </script>
 </body>
 </html>
