--- a/Projects/Project V 6/index.html
+++ b/Projects/Project V 6/index.html
@@ -6,19 +6,55 @@
 <link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css">
 <link type="text/javascript" href="scripts/shopping.js">
 <script>
-		function checkLogin(){
-		var user = localStorage.getItem("user");
-		if(user.loggedIn == true){
-			//CHANGE DISPLAY OF HEADER
+	var Obj = localStorage.getItem("LoggedIn");
+	var user = JSON.parse(localStorage.getItem("user"));
+	var admin = localStorage.getItem("admin");
+	function logOut(){
+		localStorage.removeItem("LoggedIn");
+		location.reload();
+	}
+	//CHECK IF LOGGED IN
+	function checkLogin(){
+		if(Obj == "true"){
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "inline";
+			}
+		}else{
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "inline";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "none";
+			}
 		}
 	}
+	//CHECK IF ADMIN IS LOGGED IN
+	function checkAdmin(){
+		var x = document.getElementsByClassName("admin");
+		if(admin == "true"){
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "block";
+			}
+		}else{
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+		}
+	}
+	
+
 </script>
 </head>
 
 <body>
-<script>
-	checkLogin();
-</script>
+
 <header>
 		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -28,12 +64,16 @@
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="logout.html">Log Out</a></li>
+            <button  class="ln" onClick="logOut()">Log Out</button>
             
 		</ul>
 </header>
-
+<script>
+	checkLogin();
+	console.log(Obj);
+	console.log(user);
+	console.log(admin);
+</script>
 <aside>
 
   <div>
