--- a/Projects/Project V 6/login.html
+++ b/Projects/Project V 6/login.html
@@ -7,40 +7,63 @@
 <link type="text/javascript" href="login.js">
 <link type="text/javascript" href="shopping.js">
 <script>
-	if(localStorage.getItem("LoggedIn"!== null)){
-		var Obj = JSON.parse(localStorage.getItem("LoggedIn"));
-	} else{
-		var Obj = "Not logged in yet!";
-	}
+	var Obj = localStorage.getItem("LoggedIn");
 	var user = JSON.parse(localStorage.getItem("user"));
+	var admin = localStorage.getItem("admin");
+	//CHECK IF LOGGED IN
+	function checkLogin(){
+		if(Obj == "true"){
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "inline";
+			}
+		}else{
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "inline";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "none";
+			}
+		}
+	}
+	//CHECK IF ADMIN IS LOGGED IN
+	function checkAdmin(){
+		var x = document.getElementsByClassName("admin");
+		if(admin == "true"){
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "block";
+			}
+		}else{
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+		}
+	}
 	//LOGIN FUNCTION!
-	function login(user){
+	function login(){
+		console.log("Function is happening");
 		console.log(document.forms["loginform"]["username"].value);
-		if(document.forms["loginform"]["username"].value == user.username&&document.form["loginform"]["password"] == user.password){
-			localStorage.setItem("LoggedIn",{loggedIn:"true"});
+		if(document.getElementById("LoginUser").value == user.username&&document.getElementById("LoginPassword").value == user.password){
+			localStorage.setItem("LoggedIn","true");
 			console.log("Logged In! Function Ran!");
 			alert("Welcome "+user.username);
+			window.location.replace("index.html");
 			return true;
 		} else{
 		console.log("Function occured, not logged in though...");
 		return false;
 		}
 	}
-	function checkLogin(Obj){
-		if(Obj.loggedIn == "true"){
-			document.getElementsByClass("ln1").style.display="none";
-			document.getElementsByCLass("ln").style.display="inline";
-		}else{
-			document.getElementsByClass("ln1").style.display="inline";
-			document.getElementsByCLass("ln").style.display="none";
-		}
-	}
 </script>
 </head>
 <body>
-	<script>
-	console.log(user.username);
-	</script>
+
 <header>
 		<img src="images/logo.png" width="134" height="54"/>
     	<ul class="nav">
@@ -54,7 +77,13 @@
             
 		</ul>
 </header>
-
+	<script>
+	checkLogin();
+	console.log(user.username);
+	console.log(user.password);
+	console.log(user);
+	console.log(Obj);
+	</script>
 
 <aside>
 
@@ -65,10 +94,10 @@
 
 
 <div class="formdiv">
-	<form name="loginform" action="login.html" method="get" id="loginform" onsubmit="login(user)">
-				<input name="username" type="text" /><div id="headerlogin">Username</div><br>
-				<input name="password" type="password" /><div id="headerlogin">Password</div><br>
-				<input type="submit" text="Submit" onClick="login(user)"; value="Submit"/>
+	<form name="loginform" id="loginform" onsubmit="return login()">
+				<input name="username" type="text" id="LoginUser" /><div id="headerlogin">Username</div><br>
+				<input name="password" type="password" id="LoginPassword"/><div id="headerlogin">Password</div><br>
+				<input type="submit" value="Submit"/>
 			</form>
 </div>
 <div style="padding:20px;font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; text-align:center;">
@@ -76,8 +105,7 @@
 	Logging in/Creating an Account gives you access to features such as The Shopping Cart and Game Trials!
 </div>
 <script>
-	console.log(user);
-	console.log(Obj);
+
 </script>	
 <div>
 	<img src="http://i.imgur.com/XRzaECO.jpg" class="loginImg"/>
