--- a/Projects/Project V 6/registercomplete.html
+++ b/Projects/Project V 6/registercomplete.html
@@ -7,6 +7,44 @@
 <link type="text/javascript" href="shopping.js">
 <script>
 //FUNCTION GET FORM
+	var admin = localStorage.getItem("admin");
+	var Obj =localStorage.getItem("LoggedIn");
+	//CHECK IF LOGGED IN
+	function checkLogin(){
+		if(Obj == "true"){
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "inline";
+			}
+		}else{
+			var x = document.getElementsByClassName("ln1");
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "inline";
+			}
+			var y = document.getElementsByClassName("ln");
+			for (t = 0; t < y.length; t++) {
+				y[t].style.display = "none";
+			}
+		}
+	}
+	//CHECK IF ADMIN IS LOGGED IN
+	function checkAdmin(){
+		var x = document.getElementsByClassName("admin");
+		if(admin == "true"){
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "block";
+			}
+		}else{
+			for (i = 0; i < x.length; i++) {
+				x[i].style.display = "none";
+			}
+		}
+	var Obj =localStorage.getItem("LoggedIn");
+	var admin = localStorage.getItem("admin");
 	function getForm(url){
 		var info=url.split("?");
 		var nameValuePairs=info[1].split("&");
@@ -18,12 +56,6 @@
 			$_GET[name]=value;
 		}
 		return $_GET;
-	}
-	function checkLogin(){
-		var user = localStorage.getItem("user");
-		if(user.loggedIn == true){
-			//CHANGE DISPLAY OF HEADER
-		}
 	}
 </script>
 </head>
@@ -51,7 +83,7 @@ function checkLogin(){
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="logout.html">Log Out</a></li>
+            <button  class="ln" onClick="logOut()">Log Out</button>
             
 		</ul>
 </header>
