--- a/Projects/Project V 6/games.html
+++ b/Projects/Project V 6/games.html
@@ -77,7 +77,9 @@
 				<center>Blackjack<br><small>Price: <em>$50</em></small>
 				<img id="gameimg" src="images/blackjack.jpg"/>
 				<button onClick=shoppingCart.add("Black Jack")>Add Item To Cart</button><br>
-				<button class="ln" onClick="(blackjack.html)">Play Game Trial</button>
+				<form class="ln" action="blackjack.html">
+					<input type="submit" value="PLAY GAME TRIAL!">
+				</form>
 				<br><div id="bj"></div></center>
 			</td>
 			<td>
