--- a/Projects/Project V 6/login.html
+++ b/Projects/Project V 6/login.html
@@ -73,8 +73,7 @@
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
-            <li class="ln"><a href="logout.html">Log Out</a></li>
-            
+            <button  class="ln" onClick="logOut()">Log Out</button>
 		</ul>
 </header>
 	<script>
