Working cart and checkout! Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Projects/Project V 6/blackjack.html
+++ b/Projects/Project V 6/blackjack.html
@@ -297,9 +297,9 @@ function newGame(player,dealer,nDeck){
 	player.Hit(nDeck);
 	dealer.Hit(nDeck);
 	writeMessage("Will you Hit Or Hold?");
-	if(dealer.cards.Value<15){
-		dealer.Hit(nDeck);
-	}
+//	if(dealer.cards.Value<15){
+//		dealer.Hit(nDeck);
+//	}
 }
 //CLEAN UP
 	function clean(player, dealer, deck, turn){
