--- a/Projects/Project V 6/index.html
+++ b/Projects/Project V 6/index.html
@@ -67,8 +67,8 @@
             <li><a href="about.html">About</a></li>
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
-            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
             <button  class="ln" onClick="logOut()">Log Out</button>
+			<li class="admin"><a href="admintools.html">ADMIN TOOLS</a></li>
             
 		</ul>
 </header>
