--- a/Projects/Project V 5/blackjack.html
+++ b/Projects/Project V 5/blackjack.html
@@ -239,6 +239,10 @@ function buttonHit(player, nDeck){
 			<li><a href="games.html">Games</a></li>
 		</ul>
 </header>
+<script>
+	checkLogin();
+	checkAdmin();
+</script>
    <table border="1px" align="center" id="blackJackArea">
 		<!--DEALER AREA-->
         <tr>
