--- a/Projects/Project V 5/register.html
+++ b/Projects/Project V 5/register.html
@@ -110,6 +110,10 @@
             
 		</ul>
 </header>
+<script>
+	checkLogin();
+	checkAdmin();
+</script>
 <div>
 	<p style="font-family:Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size:21px; text-align:center;">
     	Enter information to create an account with Reevo Inc! All of your information is <br>
