--- a/Projects/Project V 5/index.html
+++ b/Projects/Project V 5/index.html
@@ -60,7 +60,6 @@
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
             <li class="ln1"><a href="login.html">Login</a></li>
             <li class="ln1"><a href="register.html">Register</a></li>
             <button  class="ln" onClick="logOut()">Log Out</button>
@@ -99,6 +98,10 @@
     	Updates!<br>
         
     </p>
+    <p id="updates">
+		(December 10th, 2014) <br>
+		The website has been getting a lot of traffic recently! We would like to thank all of our supporters for sharing this totally advanced website with their friends! We hear that the RCC class of 14A has been visiting the site...we would like to say welcome! As a thank you to everyone from that school we have included a <em> FREE TRIAL </em> of our most famous game, BlackJack! Enjoy! :D
+	</p>
 	<p id="updates">
 		(November 17th, 2014) <br>
 		Well everyone the sight is officially up and working! Check out the Products pages for a list of 
