--- a/Projects/Project V 5/login.html
+++ b/Projects/Project V 5/login.html
@@ -73,10 +73,8 @@
     	<ul class="nav">
        	  <li><a href="index.html">Home</a></li>
             <li><a href="games.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
             <li class="ln1"><a href="login.html">Login</a></li>
-            <li class="ln1"><a href="register.html">Register</a></li>
-            <li class="ln"><a href="shoppingcart.html">Shopping Cart</a></li>
+            <li class="ln1"><a href="register.html">Register</a></li></li>
             <button  class="ln" onClick="logOut()">Log Out</button>
 		</ul>
 </header>
