--- a/Projects/Project V 5/registercomplete.html
+++ b/Projects/Project V 5/registercomplete.html
@@ -100,6 +100,6 @@
 	CONGRATULATIONS!
 	<br>
 	You are now a registered user at REEVO INC! 
-	You can now visit out <a href="login.html">Login</a> page to access Game Trials and the Shopping Cart!!
+	You can now visit out <a href="login.html">Login</a> page to see some MAGIC!!
 </body>
 </html>
