--- a/Projects/Project V 5/admintools.html
+++ b/Projects/Project V 5/admintools.html
@@ -168,6 +168,14 @@
 <br>
 	<button onClick="hideFunctions()">HIDE FUNCTIONS</button>
 </div>
+<p> <button onClick="showItems()">SHOW ITEMS</button>
+<div id="items">
+	Name: BLACK JACK<br>
+	Price: $50<br><br>
+    
+    Name: CONNECT FOUR<br>
+    Price: $45<br>
+</div>
 <div>
 	<button onClick="adminLogOut()">LOG OUT OF ADMIN ACCESS</button>
 </div>
